--- a/public/css/vars.css
+++ b/public/css/vars.css
@@ -23,27 +23,27 @@
 }
 
 :root {
-    --fore: #223;
-    --aft: #DDF;
-    --aft-image: #DDF;
+    --fore: #1a3a2e;
+    --aft: #e8f5f0;
+    --aft-image: #e8f5f0;
 
-    --fore-link: #335;
-    --fore-link-alt: #669;
-    --aft-link-alt: #e6e6eC;
+    --fore-link: #2d5a47;
+    --fore-link-alt: #4a7c59;
+    --aft-link-alt: #edf7f1;
     
     --fore-input: var(--fore);
     --aft-input: var(--aft);
 
-    --fore-block: #333;
-    --aft-block: #CCF;
-    --icon-block: #fe117D;
+    --fore-block: #234d3e;
+    --aft-block: #d4f0e0;
+    --icon-block: #16a085;
 
-    --fore-table-head: #DDF;
-    --aft-table-head: #223;
-    --fore-table-row-odd: #333;
-    --aft-table-row-odd: #DDF;
-    --fore-table-row-even: #333;
-    --aft-table-row-even: #CCF;
+    --fore-table-head: #e8f5f0;
+    --aft-table-head: #1a3a2e;
+    --fore-table-row-odd: #234d3e;
+    --aft-table-row-odd: #e8f5f0;
+    --fore-table-row-even: #234d3e;
+    --aft-table-row-even: #d4f0e0;
 
     --heading-font: 'hyper-bold', sans-serif;
     --content-font: 'hyper-reg', Verdana, Geneva, sans-serif;
@@ -88,26 +88,26 @@
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --fore: #DDF;
-        --aft: #223;
-        --aft-image: #DDD;
+        --fore: #a8e6cf;
+        --aft: #0f2419;
+        --aft-image: #a5e0c8;
     
-        --fore-link: #AAF;
-        --fore-link-alt: #CCF;
-        --aft-link-alt: #232323;
+        --fore-link: #52c996;
+        --fore-link-alt: #7dd9b8;
+        --aft-link-alt: #1a3a2e;
 
-        --fore-input: #var(--fore);
+        --fore-input: var(--fore);
         --aft-input: var(--aft);
 
-        --fore-block: #DDF;
-        --aft-block: #001;
-        --icon-block: #FE117D;
+        --fore-block: #a8e6cf;
+        --aft-block: #0a1d14;
+        --icon-block: #1dd1a1;
 
-        --fore-table-head: #DDF;
-        --aft-table-head: #224; 
-        --fore-table-row-odd: #DDF;
-        --aft-table-row-odd: #335;
-        --fore-table-row-even: #DDF;
-        --aft-table-row-even: #446;
+        --fore-table-head: #a8e6cf;
+        --aft-table-head: #1a3a2e; 
+        --fore-table-row-odd: #a8e6cf;
+        --aft-table-row-odd: #1f3d32;
+        --fore-table-row-even: #a8e6cf;
+        --aft-table-row-even: #2d5a47;
     }
 }
