Improve site nav layout and don't overlap close icon

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -446,37 +446,39 @@ a.navigation-icon:focus {
 /* Navigation */
 
 .site-nav {
+    --site-nav-indent: 0.5rem;
     font-size: var(--font-size-meta);
 }
 
-.site-nav ul {
-    border-top: 1px solid var(--fore-link);
+.site-nav > ul {
+    border-bottom: 1px solid var(--fore-link);
 }
 
 .site-nav li {
     list-style: none;
-    border-bottom: 1px solid var(--fore-link);
+}
+
+details.sub-nav details {
+    margin-inline-start: calc(var(--marker-size) + var(--site-nav-indent));
+}
+
+.site-nav > ul > li {
+    border-top: 1px solid var(--fore-link);
 }
 
 .site-nav a {
     text-indent: var(--marker-size);
     width: calc(100% - 2.07rem);
     display: inline-block;
-    padding: 0.5rem 1rem;
+    padding: 1rem var(--site-nav-indent);
     text-decoration: none;
-    padding: 1rem;
 }
 
 .site-nav li.has-children summary span {
     text-indent: 0;
     display: inline-block;
-    padding: 0.5rem 1rem;
+    padding: 1rem var(--site-nav-indent);
     text-decoration: none;
-    padding: 1rem;
-}
-
-.site-nav li.has-children ul a {
-    text-indent: calc(var(--marker-size) * 2);
 }
 
 .site-nav a[aria-current] {
@@ -609,11 +611,11 @@ a.navigation-icon:focus {
 .overlay {
     position: fixed;
     top: 0;
-    width: calc(100% - 2em);
-    height: calc(100% - 7rem);
+    width: calc(100vw - 6rem);
+    height: calc(100vh - 7rem);
     max-height: 100vh;
     background-color: var(--aft);
-    padding: 5rem 1em 2rem 1em;
+    padding: 5rem 3rem 2rem 3rem;
     overflow-y: auto;
     z-index: 1;
 }
