Improve nav style

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,7 @@
 html {
     box-sizing: border-box;
     interpolate-size: allow-keywords;
+    scrollbar-gutter: stable;
 
     @media (prefers-reduced-motion: no-preference) {
         scroll-behavior: smooth;
@@ -22,13 +23,7 @@ html {
     padding: 0;
     vertical-align: baseline;
     text-decoration-skip-ink: auto;
-}
-
-html {
-    scroll-padding-top: 5em;
-    @media (prefers-reduced-motion: no-preference) {
-        scroll-behavior: smooth;
-    }
+    scrollbar-gutter: stable;
 }
 
 body {
@@ -106,6 +101,7 @@ button {
 }
 
 summary {
+    padding-inline: 0;
     text-decoration: none;
 }
 
@@ -458,24 +454,17 @@ a.navigation-icon:focus {
     list-style: none;
 }
 
-details.sub-nav details {
-    margin-inline-start: calc(var(--marker-size) + var(--site-nav-indent));
-}
-
 .site-nav > ul > li {
     border-top: 1px solid var(--fore-link);
+}
+
+.site-nav > ul > li li {
+    border-top: 1px solid color-mix(in srgb, var(--fore-link) 50%, transparent);
 }
 
 .site-nav a {
     text-indent: var(--marker-size);
     width: calc(100% - 2.07rem);
-    display: inline-block;
-    padding: 1rem var(--site-nav-indent);
-    text-decoration: none;
-}
-
-.site-nav li.has-children summary span {
-    text-indent: 0;
     display: inline-block;
     padding: 1rem var(--site-nav-indent);
     text-decoration: none;
@@ -493,6 +482,21 @@ details.sub-nav details {
 .site-nav details summary::marker {
     font-size: var(--marker-size);
     width: 1em;
+}
+
+.site-nav li.has-children summary span {
+    text-indent: 0;
+    display: inline-block;
+    padding: 1rem var(--site-nav-indent);
+    text-decoration: none;
+}
+
+details.sub-nav {
+    padding: 0rem !important;
+}
+
+details.sub-nav details {
+    margin-inline-start: calc(var(--marker-size) + var(--site-nav-indent));
 }
 
 .overlay-menu .site-nav {
