Author image alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -798,8 +798,8 @@ details.sub-nav details {
     border: 3px solid var(--fore-link);
 
     @media (max-width: 680px) {
-        filter: grayscale(calc(1 - var(--imgshown)));
-        scale: calc(1 + (0.2 * var(--imgshown)));
+        filter: grayscale(calc(1 - var(--img-shown)));
+        scale: calc(1 + (0.2 * var(--img-shown)));
         transform: rotate(3deg);
     }
 }
@@ -904,7 +904,6 @@ details.sub-nav details {
 
     @media (max-width: 860px) {
         display: block;
-        margin: 0 auto;
     }
 }
 
