Stage one... move events to a content collection

--- a/src/themes/accelerator/components/TimelineEvent.astro
+++ b/src/themes/accelerator/components/TimelineEvent.astro
@@ -23,22 +23,30 @@ threeMonthsAgo.setMonth(threeMonthsAgo.getMonth() - 3);
 
 const isOld = eventDate < threeMonthsAgo;
 
-const displayDate = isOld
-    ? accelerator.dateFormatter.formatDateWithoutDay(date, SITE.default.locale)
-    : accelerator.dateFormatter.formatShortDate(date, SITE.default.locale);
+const formatDate = (d) => {
+    try {
+        return isOld
+            ? accelerator.dateFormatter.formatDateWithoutDay(
+                  d,
+                  SITE.default.locale,
+              )
+            : accelerator.dateFormatter.formatShortDate(d, SITE.default.locale);
+    } catch (e) {
+        return new Date(d).toLocaleDateString(SITE.default.locale);
+    }
+};
+
+const displayDate = formatDate(date);
 ---
 
 <div class="timeline-event">
     <div>
-        <time datetime={date}>{displayDate}</time>{
+        <time datetime={date.toString()}>{displayDate}</time>{
             !isOld && endDate && (
                 <Fragment>
                     &dash;
-                    <time datetime={endDate}>
-                        {accelerator.dateFormatter.formatShortDate(
-                            endDate,
-                            SITE.default.locale,
-                        )}
+                    <time datetime={endDate.toString()}>
+                        {formatDate(endDate)}
                     </time>
                 </Fragment>
             )
@@ -50,7 +58,7 @@ const displayDate = isOld
         {
             linkHref && (
                 <a href={linkHref} class="button">
-                    {linkText}
+                    {linkText || "Link"}
                 </a>
             )
         }
