--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1374,7 +1374,7 @@ figure:focus .magnify-button {
     content: '';
     left: var(--timeline-gap);
     position: absolute;
-    top: calc(var(--block-gap) * -1);
+    top: calc((var(--block-gap) + 1px) * -1);
     width: 0.4rem;
 }
 
